Add zgc of gc_classify.md.